--- a/src/routes/feedback/feedbackinput/feedbackinput.styles.scss
+++ b/src/routes/feedback/feedbackinput/feedbackinput.styles.scss
@@ -4,18 +4,18 @@
   gap: 15px;
   display: flex;
   flex-direction: column;
-  color: white;
+  flex-wrap: wrap;
 }
 .name-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  color: white;
-}
 
-.nameinput {
-  color: white !important;
+  @media screen and (max-width: 660px) {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 .postButtonContainer {
