--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -15,6 +15,9 @@
   @media screen and (max-width: 972px) {
     width: 95%;
   }
+  @media screen and (max-width: 500px) {
+    margin: 5px 0 5px 0;
+  }
   @media screen and (min-height: 670px) {
     margin: 15px 0 15px 0;
   }
