--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -41,13 +41,11 @@ $borderRadius: 4px;
   margin-top: 35px;
   height: 50vh;
   width: 60%;
-  gap: 15px;
 
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding: 10px 10px;
   transform: translate(-2%, -2%);
   font-family: $theme-font;
   text-decoration: none;
@@ -89,8 +87,10 @@ $borderRadius: 4px;
     }
   }
 
-  @media screen and (max-width: 1750px) {
-    height: 100%;
+  @media screen and (max-width: 1300px) {
+    height: none;
+    min-height: 350px;
+    gap: 10px;
     flex-direction: column;
   }
   @media screen and (max-width: 1000px) {
