--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -12,11 +12,22 @@ $mobile-width: 900px;
 
 .image-container {
   border-radius: 2px;
-  height: 100%;
-  width: 30%;
+  height: 80%;
+  width: 25%;
   background-color: transparent;
-
   transition: all $theme-transition;
+
+  @include themed() {
+    border: 3px solid t($primary);
+    box-shadow: 0 4px 8px 0 t($shadow-color);
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; // Keeps the image aspect ratio
+    border: 0;
+  }
 }
 
 .text-container {
