--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -47,7 +47,7 @@
     transition: all $buttonTransitionTime, background-color $theme-transition;
   }
 
-  $button-height: 100%;
+  $button-height: 90%;
   $button-width: 25%;
   $button-font-size: 1.25em;
   $button-transform: translate(0%, 4%);
@@ -61,6 +61,7 @@
     border-width: $button-border-width;
     height: $button-height;
     width: $button-width;
+    min-height: 50px;
   }
 
   .categoryButton {
@@ -209,9 +210,23 @@
     .category-text {
       margin-left: 5px;
       margin-right: 5px;
-      cursor: pointer;
+      font-size: 1.5rem;
       @include themed() {
         color: t($text-color);
+      }
+
+      @media screen and (max-width: $smallScreenWidth) {
+        font-size: 90%;
+      }
+
+      @media screen and (max-width: 390px) {
+        margin-left: 0;
+        margin-right: 0;
+        font-size: 80%;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
