--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -25,7 +25,7 @@ $mobile-width: 900px;
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover; // Keeps the image aspect ratio
+    object-fit: cover;
     border: 0;
   }
 }
