--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -97,3 +97,80 @@ $borderRadius: 4px;
     width: 85%;
   }
 }
+
+// explore button styles
+$buttonTransitionTime: 0.1s;
+$borderRadius: 4px;
+%block {
+  position: absolute;
+  content: "";
+  transition: all $buttonTransitionTime;
+}
+
+.toVenturesButton {
+  display: inline-block;
+  padding: 15px 35px;
+  transform: translate(-10%, -10%);
+  font-family: $theme-font;
+  text-decoration: none;
+  font-size: 2rem;
+  transition: all $buttonTransitionTime, background-color $theme-transition;
+  border-width: 0px;
+  margin-bottom: 1vh;
+
+  @include themed() {
+    background-color: t($primary);
+    color: t($text-color);
+  }
+  &::before {
+    //bottom side
+    @extend %block;
+    bottom: -16px;
+    height: 17px;
+    width: 99.4%;
+    left: 8px;
+    transform: skewX(45deg);
+    transition: all $buttonTransitionTime, background-color $theme-transition;
+    @include themed() {
+      background-color: darken(t($primary), 10%);
+    }
+  }
+
+  &::after {
+    // right side
+    @extend %block;
+    right: -15px;
+    height: 100%;
+    width: 16px;
+    bottom: -8px;
+    transform: skewY(45deg);
+    @include themed() {
+      background-color: darken(t($primary), 30%);
+    }
+    transition: all $buttonTransitionTime, background-color $theme-transition;
+  }
+
+  &:active {
+    transform: translate(-8%, -3%);
+    margin-left: 10px;
+    margin-top: 10px;
+    &::before {
+      bottom: -5px;
+      height: 5px;
+      left: 3px;
+    }
+
+    &::after {
+      right: -5px;
+      width: 5px;
+      bottom: -3px;
+    }
+  }
+
+  &:hover {
+    @include themed() {
+      background-color: darken(t($primary), 5%);
+    }
+    transition: all $buttonTransitionTime, background-color 0.1s;
+  }
+}
