--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -15,7 +15,7 @@ $borderRadius: 4px;
   width: 100%;
   height: 67.5vh;
 
-  @media screen and (max-width: 540px) {
+  @media screen and (max-width: 1300px) {
     height: 100%;
   }
 }
@@ -52,6 +52,16 @@ $borderRadius: 4px;
   font-size: 1vw;
   transition: all $theme-transition;
 
+  @media screen and (max-width: 1300px) {
+    height: 100%;
+    min-height: 350px;
+    gap: 10px;
+    flex-direction: column;
+  }
+  @media screen and (max-width: 1000px) {
+    width: 85%;
+  }
+
   @include themed() {
     background-color: t($container-color);
   }
@@ -85,16 +95,6 @@ $borderRadius: 4px;
       background-color: darken(t($primary), 25%);
       box-shadow: 10px 0px 10px t($shadow-color);
     }
-  }
-
-  @media screen and (max-width: 1300px) {
-    height: none;
-    min-height: 350px;
-    gap: 10px;
-    flex-direction: column;
-  }
-  @media screen and (max-width: 1000px) {
-    width: 85%;
   }
 }
 
