--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -52,13 +52,13 @@ $borderRadius: 4px;
   font-size: 1vw;
   transition: all $theme-transition;
 
-  @media screen and (max-width: 1300px) {
+  @media screen and (max-width: $mobile-width) {
     height: 100%;
     min-height: 350px;
     gap: 10px;
     flex-direction: column;
   }
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: $mobile-width) {
     width: 85%;
   }
 
