--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -41,6 +41,7 @@ $borderRadius: 4px;
   margin-top: 35px;
   height: 50vh;
   width: 55%;
+  min-width: 780px;
 
   display: flex;
   flex-direction: row;
@@ -53,13 +54,12 @@ $borderRadius: 4px;
   transition: all $theme-transition;
 
   @media screen and (max-width: $mobile-width) {
+    min-width: 0px;
+    width: 85%;
     height: 100%;
     min-height: 350px;
     gap: 10px;
     flex-direction: column;
-  }
-  @media screen and (max-width: $mobile-width) {
-    width: 85%;
   }
 
   @include themed() {
