Loading Image component loading wheel

--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -91,3 +91,9 @@ $borderRadius: 4px;
   transition: all $theme-transition;
   text-align: center;
 }
+
+.headshot {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
