--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -12,6 +12,7 @@ $border-color: "border-color";
 $container-color: "container-color";
 $shadow-color: "shadow-color";
 $background: "background";
+$buttonTransitionTime: 0.15s;
 
 $mobile-width: 950px;
 
@@ -108,6 +109,13 @@ $theme-transition: 1.5s;
     background-color: darken(t($primary), 25%);
   }
 }
+
+%block {
+  position: absolute;
+  content: "";
+  transition: all $buttonTransitionTime;
+}
+
 :export {
   theme-transition: $theme-transition;
 }
