--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button {
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
