--- a/src/routes/footer.styles.scss
+++ b/src/routes/footer.styles.scss
@@ -23,22 +23,27 @@ $buttonTransitionTime: 0.09s;
   }
 
   .switchContainer {
-    flex: 1;
     font-family: $theme-font;
-
+    background-color: rgba(255, 255, 255, 0.113);
+    backdrop-filter: blur(4px);
+    border-radius: 6px;
+    padding: 4px;
     .toggle {
       font-family: $theme-font;
     }
   }
 
   .extlinks-container {
-    flex: 1;
-    height: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
     right: 1px;
     bottom: 2px;
     justify-content: flex-end;
+    background-color: rgba(255, 255, 255, 0.113);
+    backdrop-filter: blur(4px);
+    border-radius: 6px;
+    padding: 4px;
   }
 
   .toTopContainer {
@@ -50,7 +55,7 @@ $buttonTransitionTime: 0.09s;
     .toTopButton {
       display: inline-block;
       padding: 5px;
-      transform: translate(-8%, -8%);
+      transform: translate(5%, -8%);
       font-family: $theme-font;
       text-decoration: none;
       font-size: 1.2rem;
@@ -82,9 +87,9 @@ $buttonTransitionTime: 0.09s;
       &::after {
         // right side
         @extend %block;
-        right: -10px;
+        right: -11px;
         height: 98%;
-        width: 10px;
+        width: 11px;
         bottom: -5px;
         transform: skewY(45deg);
         transition: all $buttonTransitionTime,
@@ -95,7 +100,7 @@ $buttonTransitionTime: 0.09s;
       }
 
       &:active {
-        transform: translate(-7%, -4%);
+        transform: translate(6%, -4%);
         margin-left: 10px;
         margin-top: 10px;
 
@@ -103,12 +108,13 @@ $buttonTransitionTime: 0.09s;
           bottom: -5px;
           height: 5px;
           left: 3px;
+          width: 99%;
         }
 
         &::after {
-          right: -4px;
-          width: 5px;
-          bottom: -1px;
+          right: -5px;
+          width: 6px;
+          bottom: -2px;
         }
       }
 
